lib/parsing/net_parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On UNDERSCORE shift to state 1
-- On TYPE shift to state 2
-- On TRUE shift to state 34
-- On STRING shift to state 35
-- On RIGHT shift to state 36
-- On LPAREN shift to state 37
-- On LEFT shift to state 38
-- On INT shift to state 39
-- On ID shift to state 40
-- On FOREIGN shift to state 51
-- On FALSE shift to state 41
-- On var_id shift to state 42
-- On value shift to state 43
-- On stmt_block shift to state 58
-- On stmt shift to state 60
-- On prog shift to state 202
-- On nonempty_list(local_pattern) shift to state 61
-- On local_pattern shift to state 175
-- On list(stmt) shift to state 179
-- On foreign_decl shift to state 180
## Reductions:
-- On EOF
--   reduce production list(stmt) ->

State 1:
## Known stack suffix:
## UNDERSCORE
## LR(1) items:
local_pattern -> UNDERSCORE . [ UNDERSCORE TRUE STRING RPAREN RIGHT LPAREN LEFT INT ID FALSE COMMA COLONEQ COLON ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TRUE STRING RPAREN RIGHT LPAREN LEFT INT ID FALSE COMMA COLONEQ COLON ARROW
--   reduce production local_pattern -> UNDERSCORE

State 2:
## Known stack suffix:
## TYPE
## LR(1) items:
stmt -> TYPE . typ_id COLONEQ net_type option(SEMICOLON) [ UNDERSCORE TYPE TRUE STRING RIGHT LPAREN LEFT INT IN ID FOREIGN FALSE EOF ]
## Transitions:
-- On ID shift to state 3
-- On typ_id shift to state 4
## Reductions:

State 3:
## Known stack suffix:
## ID
## LR(1) items:
typ_id -> ID . [ COLONEQ ]
## Transitions:
## Reductions:
-- On COLONEQ
--   reduce production typ_id -> ID

State 4:
## Known stack suffix:
## TYPE typ_id
## LR(1) items:
stmt -> TYPE typ_id . COLONEQ net_type option(SEMICOLON) [ UNDERSCORE TYPE TRUE STRING RIGHT LPAREN LEFT INT IN ID FOREIGN FALSE EOF ]
## Transitions:
-- On COLONEQ shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## TYPE typ_id COLONEQ
## LR(1) items:
stmt -> TYPE typ_id COLONEQ . net_type option(SEMICOLON) [ UNDERSCORE TYPE TRUE STRING RIGHT LPAREN LEFT INT IN ID FOREIGN FALSE EOF ]
## Transitions:
-- On UNIT_T shift to state 6
-- On LPAREN shift to state 7
-- On ID shift to state 8
-- On net_type shift to state 31
-- On loc_id shift to state 12
## Reductions:

State 6:
## Known stack suffix:
## UNIT_T
## LR(1) items:
net_type -> UNIT_T . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production net_type -> UNIT_T

State 7:
## Known stack suffix:
## LPAREN
## LR(1) items:
net_type -> LPAREN . net_type RPAREN [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 6
-- On LPAREN shift to state 7
-- On ID shift to state 8
-- On net_type shift to state 9
-- On loc_id shift to state 12
## Reductions:

State 8:
## Known stack suffix:
## ID
## LR(1) items:
loc_id -> ID . [ WITH TILDE_ARROW THEN SEMICOLON RPAREN IN ELSE DOT COMMA BAR ]
## Transitions:
## Reductions:
-- On WITH TILDE_ARROW THEN SEMICOLON RPAREN IN ELSE DOT COMMA BAR
--   reduce production loc_id -> ID

State 9:
## Known stack suffix:
## LPAREN net_type
## LR(1) items:
net_type -> net_type . ARROW net_type [ TIMES RPAREN PLUS ARROW ]
net_type -> net_type . TIMES net_type [ TIMES RPAREN PLUS ARROW ]
net_type -> net_type . PLUS net_type [ TIMES RPAREN PLUS ARROW ]
net_type -> LPAREN net_type . RPAREN [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On TIMES shift to state 10
-- On RPAREN shift to state 26
-- On PLUS shift to state 27
-- On ARROW shift to state 29
## Reductions:

State 10:
## Known stack suffix:
## net_type TIMES
## LR(1) items:
net_type -> net_type TIMES . net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 6
-- On LPAREN shift to state 7
-- On ID shift to state 8
-- On net_type shift to state 11
-- On loc_id shift to state 12
## Reductions:

State 11:
## Known stack suffix:
## net_type TIMES net_type
## LR(1) items:
net_type -> net_type . ARROW net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> net_type . TIMES net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> net_type TIMES net_type . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> net_type . PLUS net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production net_type -> net_type TIMES net_type

State 12:
## Known stack suffix:
## loc_id
## LR(1) items:
net_type -> loc_id . DOT local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On DOT shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## loc_id DOT
## LR(1) items:
net_type -> loc_id DOT . local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 14
-- On STRING_T shift to state 15
-- On LPAREN shift to state 16
-- On INT_T shift to state 17
-- On BOOL_T shift to state 18
-- On local_type shift to state 25
## Reductions:

State 14:
## Known stack suffix:
## UNIT_T
## LR(1) items:
local_type -> UNIT_T . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> UNIT_T

State 15:
## Known stack suffix:
## STRING_T
## LR(1) items:
local_type -> STRING_T . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> STRING_T

State 16:
## Known stack suffix:
## LPAREN
## LR(1) items:
local_type -> LPAREN . local_type RPAREN [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 14
-- On STRING_T shift to state 15
-- On LPAREN shift to state 16
-- On INT_T shift to state 17
-- On BOOL_T shift to state 18
-- On local_type shift to state 19
## Reductions:

State 17:
## Known stack suffix:
## INT_T
## LR(1) items:
local_type -> INT_T . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> INT_T

State 18:
## Known stack suffix:
## BOOL_T
## LR(1) items:
local_type -> BOOL_T . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> BOOL_T

State 19:
## Known stack suffix:
## LPAREN local_type
## LR(1) items:
local_type -> local_type . TIMES local_type [ TIMES RPAREN PLUS ]
local_type -> local_type . PLUS local_type [ TIMES RPAREN PLUS ]
local_type -> LPAREN local_type . RPAREN [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On TIMES shift to state 20
-- On RPAREN shift to state 22
-- On PLUS shift to state 23
## Reductions:

State 20:
## Known stack suffix:
## local_type TIMES
## LR(1) items:
local_type -> local_type TIMES . local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 14
-- On STRING_T shift to state 15
-- On LPAREN shift to state 16
-- On INT_T shift to state 17
-- On BOOL_T shift to state 18
-- On local_type shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## local_type TIMES local_type
## LR(1) items:
local_type -> local_type . TIMES local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
local_type -> local_type TIMES local_type . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
local_type -> local_type . PLUS local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> local_type TIMES local_type

State 22:
## Known stack suffix:
## LPAREN local_type RPAREN
## LR(1) items:
local_type -> LPAREN local_type RPAREN . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> LPAREN local_type RPAREN

State 23:
## Known stack suffix:
## local_type PLUS
## LR(1) items:
local_type -> local_type PLUS . local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 14
-- On STRING_T shift to state 15
-- On LPAREN shift to state 16
-- On INT_T shift to state 17
-- On BOOL_T shift to state 18
-- On local_type shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## local_type PLUS local_type
## LR(1) items:
local_type -> local_type . TIMES local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
local_type -> local_type . PLUS local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
local_type -> local_type PLUS local_type . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On TIMES shift to state 20
## Reductions:
-- On UNDERSCORE TYPE TRUE STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production local_type -> local_type PLUS local_type

State 25:
## Known stack suffix:
## loc_id DOT local_type
## LR(1) items:
local_type -> local_type . TIMES local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
local_type -> local_type . PLUS local_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> loc_id DOT local_type . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production net_type -> loc_id DOT local_type

State 26:
## Known stack suffix:
## LPAREN net_type RPAREN
## LR(1) items:
net_type -> LPAREN net_type RPAREN . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
## Reductions:
-- On UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production net_type -> LPAREN net_type RPAREN

State 27:
## Known stack suffix:
## net_type PLUS
## LR(1) items:
net_type -> net_type PLUS . net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 6
-- On LPAREN shift to state 7
-- On ID shift to state 8
-- On net_type shift to state 28
-- On loc_id shift to state 12
## Reductions:

State 28:
## Known stack suffix:
## net_type PLUS net_type
## LR(1) items:
net_type -> net_type . ARROW net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> net_type . TIMES net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> net_type . PLUS net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
net_type -> net_type PLUS net_type . [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On TIMES shift to state 10
## Reductions:
-- On UNDERSCORE TYPE TRUE STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW
--   reduce production net_type -> net_type PLUS net_type

State 29:
## Known stack suffix:
## net_type ARROW
## LR(1) items:
net_type -> net_type ARROW . net_type [ UNDERSCORE TYPE TRUE TIMES STRING SEMICOLON RPAREN RIGHT PLUS LPAREN LEFT INT IN ID FOREIGN FALSE EOF COLONEQ ARROW ]
## Transitions:
-- On UNIT_T shift to state 6
-- On LPAREN shift to state 7
-- On ID shift to state 8
-- On net_type shift to state 30
-- On loc_id shift to state 12
## Reductions:

State 30:
## Known stack suffix:
